--- a/.github/workflows/package.json
+++ b/.github/workflows/package.json
@@ -10,3 +10,7 @@
   "author": "",
   "license": "ISC"
 }
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "audit": "npm audit"
+}
