--- a/npm-audit.yml
+++ b/npm-audit.yml
@@ -1,4 +1,4 @@
-name: Verificação de Segurança com npm audit
+name: Verificação de Segurança com NPM Audit
 
 on:
   push:
@@ -9,6 +9,10 @@ on:
 jobs:
   audit:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: Squad_4
 
     steps:
       - name: Clonar o repositório
@@ -23,4 +27,4 @@ jobs:
         run: npm install
 
       - name: Rodar npm audit
-        run: npm audit --audit-level=moderate
+        run: npm audit
